--- a/templates/front/includes/footer.html.twig
+++ b/templates/front/includes/footer.html.twig
@@ -40,11 +40,10 @@
                     <div class="footer-single-wized-start">
                         <h5 class="title">Liens utile</h5>
                         <ul class="footer-nav">
-                            <li><a href="about.html">L'agence</a></li>
-                            <li><a href="portfolio-filter.html">Nos Réalisations</a></li>
-                            <li><a href="service-1.html">Nos Service</a></li>
-                            <li><a href="blog.html">Nos tarifs</a></li>
-                            <li><a href="contact.html">Contactez-moi</a></li>
+                            <li><a href="{{ url('front_about') }}">L'agence</a></li>
+                            <li><a href="{{ url('front_project') }}">Nos Réalisations</a></li>
+                            <li><a href="{{ url('front_devis_new') }}">Nos tarifs</a></li>
+                            <li><a href="{{ url('front_contact') }}">Contactez-moi</a></li>
                         </ul>
                     </div>
                     <!-- footer single wized end -->
@@ -54,7 +53,7 @@
                         <div class="mail-contact-area">
                             <div class="single-con-info mb--40">
                                 <a href="#">
-                                    Nièvre, France.
+                                    Yonne, France.
                                 </a>
                             </div>
                             <div class="single-con-info mail">
