--- a/templates/front/projets/show.html.twig
+++ b/templates/front/projets/show.html.twig
@@ -5,7 +5,9 @@
 {% endblock %}
 
 {% block content %}
-
+	<div class="cta-style-one rts-section-gapTop section-gap banner-bg-1 text-center" style="height: auto;">
+		<h2>{{ project.title }}</h2>
+	</div>
 
 	<div id="ajax-page" class="ajax-page-content container">
 		<div class="ajax-page-wrapper">
