--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -47,9 +47,9 @@
 
 		<!-- scriptzen about area start -->
 		<div class="rts-about-area-1 rts-section-gapBottom">
-			<div class="shape-about-one">
+			{#<div class="shape-about-one">
 				<img src="{{ asset('assets/front/images/about/07.png') }}" alt="about">
-			</div>
+			</div>#}
 			<div class="container-full">
 				<div class="row">
 					<div class="col-lg-12">
@@ -101,7 +101,7 @@
 									Fondée en 2023, ScriptzenIT fait son entrée dans le domaine numérique en redéfinissant les frontières de l'innovation et de l'excellence. Portée par une vision avant-gardiste, notre entreprise s'engage à remodeler le monde numérique. Notre approche est centrée sur nos clients, et nous collaborons avec des entreprises de toutes tailles et de tous secteurs pour concevoir des stratégies sur mesure qui répondent précisément à leurs besoins et objectifs spécifiques. ScriptzenIT est prête à laisser une empreinte indélébile dans le domaine numérique en proposant des solutions inégalées et en réimaginant l'avenir de la technologie.
 								</p>
 								<div class="btn--area-left mt--50">
-									<a href="{{  url('front_devis_new') }}" class="text-white">Démarrer ma demande<i
+									<a href="{{  url('front_devis_new') }}">Démarrer ma demande<i
 												class="fa-solid fa-arrow-up-right"></i></a>
 								</div>
 							</div>
