--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -134,10 +134,10 @@
 						<!-- Start of the left approach area -->
 						<div class="approach-area-left">
 							<div class="title-area-left-wrapper">
-								<span class="pre-title">Notre Approche</span>
+								<span class="quote">Notre Approche</span>
 								<h2 class="title quote">Expertise en Stratégie, Design et Développement</h2>
 							</div>
-							<p class="disc rts-text-anim">
+							<p class="disc text-white">
 								Le processus de travail de l'agence ScriptZenIT est une véritable fusion d'art et de
 								technologie, où chaque projet est abordé avec une précision méticuleuse. Notre expertise en
 								stratégie, design et développement garantit des solutions numériques exceptionnelles et uniques.
