--- a/templates/front/contact/index.html.twig
+++ b/templates/front/contact/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block content %}
     <div class="cta-style-one rts-section-gapTop section-gap banner-bg-1 text-center" style="height: auto;">
-        <h1>Et si nous discutions ?</h1>
+        <h1>Et si nous discutons ?</h1>
         <div class="page-subtitle">
             <h4>Construisons quelque chose d'exceptionnel ensemble !</h4>
         </div>
