--- a/templates/front/includes/nav.html.twig
+++ b/templates/front/includes/nav.html.twig
@@ -172,16 +172,10 @@
 												</ul>#}
 											</li>
 											<li class="menu-item">
-												<a href="{{ url('front_home') }}">Services</a>
+												<a href="{{ url('front_project') }}">portfolio</a>
 											</li>
 											<li class="menu-item">
-												<a href="{{ url('front_home') }}">portfolio</a>
-											</li>
-											<li class="menu-item">
-												<a href="{{ url('front_home') }}">Tarifs</a>
-											</li>
-											<li class="menu-item">
-												<a href="{{ url('front_home') }}">Services</a>
+												<a href="{{ url('front_devis_new') }}">Tarifs</a>
 											</li>
 											<li class="menu-item {{ app.request.get('_route') == 'front_about' ? 'active' : '' }}">
 												<a class="nav-link" href="{{ url('front_about') }}">L'agence</a>
