--- a/templates/front/includes/nav.html.twig
+++ b/templates/front/includes/nav.html.twig
@@ -193,7 +193,7 @@
 												<div class="address">
 													<ul>
 														<li>
-															<p>2 les buissons, 58190, Nièvre</p>
+															<p>Yonne, 89200 Avallon</p>
 														</li>
 													</ul>
 												</div>
