--- a/templates/front/includes/nav.html.twig
+++ b/templates/front/includes/nav.html.twig
@@ -95,6 +95,9 @@
 						</li>
 						{% if app.user %}
 							<li class="menu-item">
+								<a href="{{ url('front_assistance') }}"><span class="rolling-text">Assistance</span></a>
+							</li>
+							<li class="menu-item">
 								<a href="{{ url('app_logout') }}"><span class="rolling-text">Déconnexion</span></a>
 							</li>
 						{% else %}
