new adress contact

--- a/templates/front/includes/footer.html.twig
+++ b/templates/front/includes/footer.html.twig
@@ -58,7 +58,7 @@
                             </div>
                             <div class="single-con-info mail">
                                 <a href="#">
-                                    wbelbeche.s@gmail.com
+                                    support@scriptzenit.fr
                                 </a>
                             </div>
                             <div class="single-con-info">
