--- a/templates/front/includes/nav.html.twig
+++ b/templates/front/includes/nav.html.twig
@@ -205,7 +205,7 @@
 												<h2 class="heading-title">Me contacter</h2>
 												<div class="contact">
 													<ul>
-														<li><a href="mailto:wbelbeche.s@gmail.com" class="mail">wbelbeche.s@gmail.com</a></li>
+														<li><a href="mailto:support@scriptzenit.fr" class="mail">support@scriptzenit.fr</a></li>
 														<li><a href="tel:0762972691" class="number">+33 (0)7 62 97 26 91</a></li>
 													</ul>
 												</div>
