removed google tag manager for performance

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -37,14 +37,14 @@
 
 
 		<!-- Google tag (gtag.js) -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-19D64W6342"></script>
-		<script>
+		{#<script async src="https://www.googletagmanager.com/gtag/js?id=G-19D64W6342"></script>#}
+		{#<script>
 			window.dataLayer = window.dataLayer || [];
 			function gtag(){dataLayer.push(arguments);}
 			gtag('js', new Date());
 
 			gtag('config', 'G-19D64W6342');
-		</script>
+		</script>#}
 	</head>
 	<body class="index-one">
 
