added stats Youss

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,8 @@
 			{% block title %}ScriptZenIT - Création de Sites Internet et Applications de Qualité
 			{% endblock %}
 		</title>
+		<!-- Statistiques de la web app -->
+		<script async src="https://stats.youss.dev/script.js" data-website-id="2f81360d-92bc-460b-bcd6-81ba64683e42"></script>
 		<!-- Favicon -->
 		<link rel="apple-touch-icon" sizes="180x180" href="{{ asset('medias/favicon/favicon-16x16.png') }}">
 		<link rel="icon" type="image/png" sizes="32x32" href="{{ asset('medias/favicon/favicon-32x32.png') }}">
@@ -31,15 +33,6 @@
 		{% block stylesheets %}
 			{{ encore_entry_link_tags('app') }}
 		{% endblock %}
-		<!-- Google tag (gtag.js) -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-19D64W6342"></script>
-		<script>
-			window.dataLayer = window.dataLayer || [];
-			function gtag(){dataLayer.push(arguments);}
-			gtag('js', new Date());
-
-			gtag('config', 'G-19D64W6342');
-		</script>
 	</head>
 	<body class="page">
 
