--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -20,7 +20,7 @@
 					<div class="col-lg-5 align-self-center flex-column py-6">
 						<div class="col-12 col-md-12 col-lg-12">
 							<h1 class="display-2 mb-4 text-center">Agence web dans la Nièvre</h1>
-							<p class="lead mb-4 text-muted text-center">
+							<p class="mb-4 text-center">
 								Grâce à notre expertise en développement Web, je vous accompagne dans
 								la création d'un site professionnel et attractif. Cependant, une conception
 								exceptionnelle ne se limite pas à la première étape.
