--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -46,7 +46,7 @@
 			</div>
 		</section>
 
-		<div class="text-white bg-tertiary text-center vh-lg-25 vh-sm-40 pt-5" id="agence">
+		<div class="text-white bg-tertiary text-center pt-5" id="agence">
 			<h1 class="display-5 fw-bold lh-1 mb-3 text-center">Soyez Zen, On s'occupe de tout !</h1>
 			<p class="fw-bold mb-3 text-center lead text-white">Transitionnez de la planification au site grâce à ScriptZenIT, le créateur de sites Web destiné aux professionnels et aux artisans.</p>
 			<a href="{{ url('front_devis_new') }}" class="btn btn-black mr-3 animate-up-2 inline-block text-white">Démarrer ma demande
@@ -57,7 +57,7 @@
 		</div>
 
 		<div class="container">
-			<p class="lead mb-4 text-muted text-center">On conçois la solution optimale de développement web pour chaque
+			<p class="lead mb-4 text-muted text-center">On conçoit la solution optimale de développement web pour chaque
 							situation spécifique, qu'il s'agisse de développer une plateforme complète ou de mettre en place des outils précis
 							pour vos besoins uniques.
 			</p>
