--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -67,7 +67,7 @@
 					</div>
 					<div id="cookie-refused-message" class="position-fixed bg-danger text-center" style="display: none; bottom: 0; z-index: 99999; left: 0; right: 0;">
 						<p class="text-white">
-							Vous avez refusé l'utilisation des cookies. Certains fonctionnalités peuvent ne pas fonctionner correctement.
+							Vous avez refusé l'utilisation des cookies.
 						</p>
 					</div>
 				</section>
