--- a/templates/front/contact/index.html.twig
+++ b/templates/front/contact/index.html.twig
@@ -68,6 +68,18 @@
                                     </div>
                                 </div>
                             </div>
+                            <!-- Communauté et entraide ScriptZenIT -->
+                            <div class="container">
+                                <div class="" style="background-image: url('../../../public/img/contact_support.png'); background-size: cover;">
+                                    <h1 class="display-4">Notre forum</h1>
+                                    <p class="lead">Consulter notre forum en ligne, qui récupère vos informations inscrit lors de l'évaluation de votre demande, et interagissez avec les autres utilisateurs et les membres de l'équipe.</p>
+                                    <hr class="my-4">
+                                    <p>Cet accès est limité aux membres <a href="https://scriptzenit.fr">ScriptZenIT.fr</a></p>
+                                    <p class="lead">
+                                        <a class="btn btn-info btn-lg" href="https://blog.scriptzenit.fr" role="button">Accédez au forum</a>
+                                    </p>
+                                </div>
+                            </div>
                         </div>
                         <div class="col-xs-12 col-sm-8">
 
@@ -100,6 +112,7 @@
             </div>
         </div>
     </div>
+
     <script>
         document.getElementById("contact_form").addEventListener("submit", function(event) {
             let form = document.getElementById('contact_form');
