--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -81,6 +81,7 @@
 
 		<!-- Front script -->
 		{% block javascripts %}
+
 			<script src="{{ asset('js/jquery-3.5.1.min.js') }}"></script>
 			<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
 			<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -94,6 +95,9 @@
 			{{ encore_entry_script_tags('validator') }}
 			{{ encore_entry_script_tags('main') }}
 			<script src="{{ asset('js/jquery.shuffle.min.js')}}"></script>
+
+			<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+			<script src="{{ asset('assets/js/user.js') }}"></script>
 
 
 			{#  <script src="{{ asset('js/particles.js')}}"></script>#}
