feature: multiple database connexion OK

--- a/templates/front/ticket/home.html.twig
+++ b/templates/front/ticket/home.html.twig
@@ -25,18 +25,6 @@
 			</div>
 			<!-- Orders Table-->
 			<div class="col-lg-9">
-				<div class="d-flex justify-content-end pb-3">
-					<div class="form-inline">
-						<label class="text-muted mr-3" for="order-sort">Ordres de tri</label>
-						<select class="form-control" id="order-sort">
-							<option>Tous</option>
-							<option>Livré</option>
-							<option>En cours</option>
-							<option>Retardé</option>
-							<option>Annulé</option>
-						</select>
-					</div>
-				</div>
 				<div class="table-responsive">
 					<table class="table table-hover mb-0">
 						<thead>
@@ -47,6 +35,7 @@
 							<th>Prix</th>
 							<th>Action</th>
 							<th>Action ticket</th>
+							<th>Téléchargement</th>
 						</tr>
 						</thead>
 						<tbody>
@@ -82,6 +71,14 @@
 										<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
 											<path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z"/>
 											<path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z"/>
+										</svg>
+									</a>
+								</td>
+								<td>
+									<a href="{{ path('front_download_devis', {'id': devis.id}) }}" class="btn btn-outline-secondary">
+										<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
+										  <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5"/>
+										  <path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708z"/>
 										</svg>
 									</a>
 								</td>
