--- a/templates/front/devis/show.html.twig
+++ b/templates/front/devis/show.html.twig
@@ -1,154 +1,168 @@
-<html lang="fr">
+<!DOCTYPE html>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Devis n°{{ devis.id }}</title>
+    <meta charset="utf-8" />
+    <title>Ma demande PDF</title>
     <style>
-        body{margin-top:20px;
-            font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
-            font-size: 20px;
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-size: 16px;
+            line-height: 1.6;
+            color: #333;
+            margin: 0;
+            padding: 0;
+            background-color: #f9f9f9;
         }
 
-        .card-footer-btn {
+        .invoice-box {
+            max-width: 800px;
+            margin: auto;
+            padding: 30px;
+            border: 1px solid #eee;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+            font-size: 16px;
+            line-height: 24px;
+            font-family: 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif;
+            color: #555;
+        }
+
+        .invoice-box table {
+            width: 100%;
+            line-height: inherit;
+            text-align: left;
+        }
+
+        .invoice-box table td {
+            padding: 5px;
+            vertical-align: top;
+        }
+
+        .invoice-box table tr td:nth-child(2) {
+            text-align: right;
+        }
+
+        .invoice-box table tr.top table td {
+            padding-bottom: 20px;
+        }
+
+        .invoice-box table tr.top table td.title {
+            font-size: 45px;
+            line-height: 45px;
+            color: #333;
+        }
+
+        .invoice-box table tr.information table td {
+            padding-bottom: 40px;
+        }
+
+        .invoice-box table tr.heading td {
+            background: #eee;
+            border-bottom: 1px solid #ddd;
+            font-weight: bold;
+        }
+
+        .invoice-box table tr.item td {
+            border-bottom: 1px solid #eee;
+        }
+
+        .invoice-box table tr.item.last td {
+            border-bottom: none;
+        }
+
+        .invoice-box table tr.total td:nth-child(2) {
+            border-top: 2px solid #eee;
+            font-weight: bold;
+        }
+
+        @media only screen and (max-width: 600px) {
+            .invoice-box table tr.top table td {
+                width: 100%;
+                display: block;
+                text-align: center;
+            }
+
+            .invoice-box table tr.information table td {
+                width: 100%;
+                display: block;
+                text-align: center;
+            }
+        }
+        .txt-center-title{
+            text-align: center;
+        }
+        .container {
+        display: flex;
+        justify-content: space-between;
+        }
+        .row {
             display: flex;
-            align-items: center;
-            border-top-left-radius: 0!important;
-            border-top-right-radius: 0!important;
+            flex-wrap: wrap;
+            width: 100%;
         }
-        .text-uppercase-bold-sm {
-            text-transform: uppercase!important;
-            font-weight: 500!important;
-            letter-spacing: 2px!important;
-            font-size: .85rem!important;
-        }
-        .hover-lift-light {
-            transition: box-shadow .25s ease,transform .25s ease,color .25s ease,background-color .15s ease-in;
-        }
-        .justify-content-center {
-            justify-content: center!important;
-        }
-        .btn-group-lg>.btn, .btn-lg {
-            padding: 0.8rem 1.85rem;
-            font-size: 1.1rem;
-            border-radius: 0.3rem;
-        }
-        .btn-dark {
-            color: #fff;
-            background-color: #1e2e50;
-            border-color: #1e2e50;
-        }
-
-        .card {
-            position: relative;
-            display: flex;
-            flex-direction: column;
-            min-width: 0;
-            word-wrap: break-word;
-            background-color: #fff;
-            background-clip: border-box;
-            border: 1px solid rgba(30,46,80,.09);
-            border-radius: 0.25rem;
-            box-shadow: 0 20px 27px 0 rgb(0 0 0 / 5%);
-        }
-
-        .p-5 {
-            padding: 3rem!important;
-        }
-        .card-body {
-            flex: 1 1 auto;
-            padding: 1.5rem 1.5rem;
-        }
-
-        tbody, td, tfoot, th, thead, tr {
-            border-color: inherit;
-            border-style: solid;
-            border-width: 0;
-        }
-
-        .table td, .table th {
-            border-bottom: 0;
-            border-top: 1px solid #edf2f9;
-        }
-        .table>:not(caption)>*>* {
-            padding: 1rem 1rem;
-            background-color: var(--bs-table-bg);
-            border-bottom-width: 1px;
-            box-shadow: inset 0 0 0 9999px var(--bs-table-accent-bg);
-        }
-        .px-0 {
-            padding-right: 0!important;
-            padding-left: 0!important;
-        }
-        .table thead th, tbody td, tbody th {
-            vertical-align: middle;
-        }
-        tbody, td, tfoot, th, thead, tr {
-            border-color: inherit;
-            border-style: solid;
-            border-width: 0;
-        }
-
-        .mt-5 {
-            margin-top: 3rem!important;
-        }
-
-        .icon-circle[class*=text-] [fill]:not([fill=none]), .icon-circle[class*=text-] svg:not([fill=none]), .svg-icon[class*=text-] [fill]:not([fill=none]), .svg-icon[class*=text-] svg:not([fill=none]) {
-            fill: currentColor!important;
-        }
-        .svg-icon>svg {
-            width: 1.45rem;
-            height: 1.45rem;
+        .col-md-6 {
+            flex: 0 0 48%; /* Pour répartir les colonnes sur 48% de l'espace disponible */
         }
     </style>
 </head>
 <body>
-    <div class="container mt-6 mb-7">
-        <div class="justify-content-center">
-            <div class="card">
-                <div class="card-body p-5">
-                    <h2>
-                        Bonjour {{ app.user.civility}} {{ app.user.nom }},
-                    </h2>
-                    <p class="fs-sm">
-                        Ceci est le reçu du devis {{ devis.typeDeSiteWeb }} que vous avez effectué sur ScriptZenIT.
-                    </p>
-
-                    <div class="border-top border-gray-200 pt-4 mt-4">
-                        <div class=">
-                            <div class="text-muted mb-2">Numéro de devis.</div>
-                            <strong>{{ devis.id }}</strong>
-                        </div>
-                        <div class="text-md-end">
-                            <div class="text-muted mb-2">Date de création</div>
-                            <strong>{{ devis.createdAt|date('d/m/Y') }} à {{ devis.createdAt|date('H:i') }}</strong>
-                        </div>
-                        <div class="text-md-end">
-                            <div class="text-muted mb-2">Statut de la demande</div>
-                            <strong>{{ devis.statut }}</strong>
-                        </div>
-                        <div class="border-top border-gray-200 mt-4 py-4 ">
-                            <div class="text-muted mb-2">Client</div>
-                            <strong>Nom  </strong> :  {{ app.user.nom }} <br>
-                            <strong>Prenom  </strong> : {{ app.user.prenom }} <br>
-                            <strong>Email </strong> :  {{ devis.email }}
-
-                        </div>
-                    <table class="table border-bottom border-gray-200 mt-3">
-                        <thead>
-                        <tr>
-                            <th scope="col" class="fs-sm text-dark text-uppercase-bold-sm px-0">Description</th>
-                            <th scope="col" class="fs-sm text-dark text-uppercase-bold-sm text-end px-0">Prix</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr>
-                            <td class="px-0">{{ devis.descriptionProjet | nl2br  }}</td>
-                            <td class="text-end px-0">{{ devis.prix }} €</td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
+    <div class="invoice-box container">
+        <div class="container">
+            
+            <div class="container d-flex">
+                <span>Émetteur</span><br>
+                Société : ScriptZenIT <br>
+                Votre contact : Walid BELBECHE <br>
+                Adresse : Avallon <br>
+                Numéro d'entreprise : 848 967 816 <br>
+                Numéro de TVA : FR68848967816 <br>
+                Numéro de téléphone : 0762972691 <br>
+                Adresse email : wbelbeche.s@gmail.com <br>
+                Site internet : https://scriptzenit.fr
             </div>
+
+
+            <div class="container">
+                <h1 class="txt-center-title">DEMANDE EN FORMAT PAPIER</h1>
+                <h3>Bonjour {{ app.user.civility }} {{ app.user.nom }},</h3>
+                <p>Ceci est votre demande en format PDF {{ devis.typeDeSiteWeb }} que vous avez effectuée sur ScriptZenIT.fr.</p>
+                <h3>Vos préférences</h3>
+                Type de site web: {{ devis.typeDeSiteWeb }}<br />
+                Attentes design: {{ devis.attentesDesignWeb }}<br />
+                Nom: <strong>{{ app.user.nom }}</strong><br />
+                Prénom: {{ app.user.prenom }}<br />
+                Email: {{ devis.email }}
+            </div>
+            <table cellpadding="0" cellspacing="0">
+                <tr class="top">
+                    <td colspan="2">
+                        <table>
+                            <tr>
+                                <td class="title">
+                                    <img src="http://scriptzenit.fr/img/logo.png" style="width: 100%; max-width: 300px;" />
+                                </td>
+                                <td>
+                                    Numéro de devis #: {{ devis.id }}<br />
+                                    Date de création: {{ devis.createdAt|date('d/m/Y') }} à {{ devis.createdAt|date('H:i') }}<br />
+                                    Statut de la demande: <strong>{{ devis.statut }}</strong>
+                                </td>
+                            </tr>
+                        </table>
+                    </td>
+                </tr>
+
+                <tr class="heading">
+                    <td>Description</td>
+                    <td></td>
+                </tr>
+                <tr class="item">
+                    <td colspan="2">{{ devis.descriptionProjet | nl2br }}</td>
+                </tr>
+
+                <tr class="total">
+                    <td>Prix prestation</td>
+                    <td>Total: {{ devis.prix }} €</td>
+                </tr>
+            </table>
         </div>
     </div>
 </body>
