--- a/templates/back/user/index.html.twig
+++ b/templates/back/user/index.html.twig
@@ -29,11 +29,7 @@
 						<td>
 							<a href="{{ path('back_user_show', {'id': user.id}) }}">Afficher</a>
 							<a href="{{ path('back_user_edit', {'id': user.id}) }}">Modifier</a>
-							<form action="{{ path('back_user_delete', {'id': user.id}) }}" method="POST" onsubmit="return confirm('Are you sure you want to delete this user?')">
-								<input type="hidden" name="_method" value="DELETE">
-								<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ user.id) }}">
-								<button type="submit">Supprimer</button>
-							</form>
+							<a href="{{ path('back_user_delete', {'id': user.id}) }}">Supprimer</a>
 						</td>
 					</tr>
 				{% endfor %}
