wip: estimate in progress

--- a/templates/front/devis/email.html.twig
+++ b/templates/front/devis/email.html.twig
@@ -123,12 +123,12 @@
 															<p style="color:white;">
 
 																Numéro d'inscription :
-																{{ RegistredNumber }}
+																{{ registredNumber }}
 
 																<br>
 
 																Adresse email :
-																{{ email_address }},
+																{{ emailAddress }},
 																<br>
 
 																Vous souhaitez réaliser :
