--- a/templates/front/ticket/home.html.twig
+++ b/templates/front/ticket/home.html.twig
@@ -18,8 +18,8 @@
 				<!-- Account Sidebar-->
 				<div class="wizard">
 					<nav class="list-group list-group-flush">
-						<span class="list-group-item"><i class="fa fa-user text-muted"></i> {{ app.user.email }}</span>
-						<a class="list-group-item" href="{{ path('send_message') }}"><i class="fa fa-map-marker text-muted"></i>Ouvrir un ticket</a>
+						<span class="list-group-item"><i class="fa fa-user text-muted"></i><i class="bi bi-person-circle"></i> {{ app.user.email }}</span>
+						<a class="list-group-item" href="{{ path('send_message') }}"><i class="bi bi-plus-square-fill"></i> Ouvrir un ticket</a>
 					</nav>
 				</div>
 			</div>
