--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -23,6 +23,7 @@
 			<div class="container col-xl-10 col-xxl-8 px-4 py-5">
 				<div class="row align-items-center g-lg-5 py-5">
 					<div class="col-lg-7 text-center text-lg-start">
+						<div class="d-none d-md-flex col-md-4 col-lg-6 bg-primary"></div>
 						<h1 class="display-4 fw-bold lh-1 mb-3">Heureux de vous revoir !</h1>
 						<div class="register">
 							<h6>Vous n'êtes pas membre ?</h6>
@@ -58,6 +59,17 @@
 							<button class="w-100 btn btn-lg btn-primary" type="submit">
 								Me connecter
 							</button>
+							<hr class="my-4">
+							<div class="d-grid mb-2">
+								<button class="btn btn-google btn-login text-uppercase fw-bold" type="submit">
+								<i class="fab fa-google me-2"></i> Sign in with Google
+								</button>
+							</div>
+							<div class="d-grid">
+								<button class="btn btn-facebook btn-login text-uppercase fw-bold" type="submit">
+								<i class="fab fa-facebook-f me-2"></i> Sign in with Facebook
+								</button>
+							</div>
 						</form>
 					</div>
 				</div>
