--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -75,28 +75,28 @@
 							<i class="fas fa-lightbulb"></i>
 						</span>
 						<span class="process__title">Analyse &amp; Stratégie</span>
-						<span class="process__subtitle">J'analyse votre problème et développe une stratégie</span>
+						<span class="process__subtitle">Nous analysons vos problèmes et développons des stratégies</span>
 					</li>
 					<li class="process__item">
 						<span class="process__number">
 							<i class="fas fa-file-alt"></i>
 						</span>
-						<span class="process__title">Faire une Offre</span>
-						<span class="process__subtitle">Je vous fournis une offre détaillée en fonction de mon analyse</span>
+						<span class="process__title">Offre</span>
+						<span class="process__subtitle">Nous fournissons des offres détaillées en fonction de nos analyses</span>
 					</li>
 					<li class="process__item">
 						<span class="process__number">
 							<i class="fas fa-cogs"></i>
 						</span>
 						<span class="process__title">Développement</span>
-						<span class="process__subtitle">Je développe, transforme la stratégie en réalité</span>
+						<span class="process__subtitle">Nous développons et transformons les stratégies en réalité</span>
 					</li>
 					<li class="process__item">
 						<span class="process__number">
 							<i class="fas fa-check-circle"></i>
 						</span>
 						<span class="process__title">Finalisation</span>
-						<span class="process__subtitle">J'effectue les ajustements finaux et prépare la livraison</span>
+						<span class="process__subtitle">Nous effectuons les ajustements finaux et préparons les livraisons</span>
 					</li>
 				</ul>
 			</div>
