--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -70,7 +70,7 @@
 					<a href="https://www.cnil.fr/fr/guide-rgpd-du-developpeur">CNIL</a>. Vous avez la possibilité de supprimer vos données instantanément depuis votre espace personnel.</p>
 					<div class="container">
 						<button id="btn-register" type="submit" data-register-url="{{ url('api_register') }}" class="btn btn-primary">Je m'inscris</button>
-						<span data-register-url2="http://localhost:8000/api/register" data-redirect-to-login="{{ url('app_login') }}" class="register-url2"></span>
+						<span data-register-url2="https://scriptzenit.fr:2000/api/register" data-redirect-to-login="{{ url('app_login') }}" class="register-url2"></span>
 					</div>
 				{{ form_end(formRegister) }}
 			</div>
