wip: editing about + add teams member

--- a/templates/front/about/index.html.twig
+++ b/templates/front/about/index.html.twig
@@ -6,11 +6,13 @@
 {% block content %}
 
 	<div class="page-title">
-		<h1>À propos</h1>
+		<h1>L'équipe</h1>
 		<div class="page-subtitle">
-			<h4>Découvrez mon histoire et notre vision.</h4>
+			<h4>Découvrez notre histoire et notre vision.</h4>
 		</div>
 	</div>
+
+	
 	<div class="container">
 		<div class="inner-content inner-text-block">
 			<div>
